<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:columnOrderPreserved="false"
    android:columnCount="4">

    <TextView
        android:id="@+id/Project"
        android:text="@string/Project"
        android:layout_gravity="end"
        android:layout_row="0"
        android:layout_column="0" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/a_proj_spinner"
        android:layout_row="0"
        android:layout_column="1" />

    <TextView
        android:id="@+id/ID"
        android:text="@string/id"
        android:layout_gravity="end"
        android:layout_row="1"
        android:layout_column="0" />
    <EditText
        android:id="@+id/a_id_text"
        android:hint="@string/id_text"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="3"
        android:layout_row="1"
        android:layout_column="1" />



    <TextView
        android:id="@+id/name"
        android:text="@string/name"
        android:layout_gravity="end"
        android:layout_row="2"
        android:layout_column="0" />
    <EditText
        android:id="@+id/a_name_text"
        android:hint="@string/name_text"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="3"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:id="@+id/prior"
        android:text="@string/prior"
        android:layout_gravity="end"
        android:layout_row="3"
        android:layout_column="0" />
    <EditText
        android:id="@+id/a_prior_text"
        android:hint="@string/prior_text"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="3"
        android:layout_row="3"
        android:layout_column="1" />

    <TextView
        android:id="@+id/start_date"
        android:text="@string/start_date"
        android:layout_gravity="end"
        android:layout_row="4"
        android:layout_column="0" />
    <EditText
        android:id="@+id/a_start_date_text"
        android:hint="@string/start_date_text"
        android:layout_gravity="fill_horizontal"
        android:inputType="date"
        android:layout_columnSpan="3"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:id="@+id/end_date"
        android:text="@string/end_date"
        android:layout_gravity="end"
        android:layout_row="5"
        android:layout_column="0" />
    <EditText
        android:id="@+id/a_end_date_text"
        android:hint="@string/end_date_text"
        android:inputType="date"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="3"
        android:layout_row="5"
        android:layout_column="1" />

    <TextView
        android:id="@+id/effort"
        android:text="@string/effort"
        android:layout_gravity="end"
        android:layout_row="6"
        android:layout_column="0" />
    <EditText
        android:id="@+id/a_effort_text"
        android:hint="@string/effort_text"
        android:layout_gravity="fill_horizontal"
        android:layout_columnSpan="3"
        android:layout_row="6"
        android:layout_column="1" />


    <Button
        android:id="@+id/a_saveB"
        android:text="@string/button_save"
        android:layout_column="1"
        android:layout_row="7" />
    <Button
        android:id="@+id/a_newB"
        android:text="@string/button_new"
        android:layout_row="7"
        android:layout_column="2" />
    <Button
        android:id="@+id/a_deleteB"
        android:text="@string/button_delete"
        android:layout_row="7"
        android:layout_column="3" />

</GridLayout>