<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/newM" android:title="@string/menu_new"
        app:showAsAction="never"/>
    <item android:id="@+id/saveM" android:title="@string/menu_save"
        app:showAsAction="never"/>
    <item android:id="@+id/deleteM" android:title="@string/menu_delete"
        app:showAsAction="never"/>
    <item android:id="@+id/writeActM" android:title="@string/menu_writeActivities"
        app:showAsAction="never"/>
    <item android:id="@+id/showActM" android:title="@string/menu_showActivities"
        app:showAsAction="never"/>
    <item android:id="@+id/showProjectM" android:title="Show Projects"
        app:showAsAction="never"/>
</menu>
